feat: add export script and refactor code
- Added "export" script to package.json for building the application
- Removed unused motivational messages and related function from page.tsx
- Updated type assertion for gtag in page.tsx to improve type safety
- Cleaned up imports in SoundCard.tsx by removing unused components

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "export": "next build"
   },
   "dependencies": {
     "@mantine/core": "^8.3.1",
